<resources>
    <string name="app_name">HomeOfTheDragon</string>
    <string name="greeting">Bienvenido Sir, con quién tengo el placer de conversar?</string>
    <string name="dark_knight">Dark Knight</string>
    <string name="answer">Responder</string>
    <string name="greeting_election">Sir %s, es el momento de que tomes una difícil elección...</string>
    <string name="activity_restarted">"La Activity ha sido reiniciada (Restarted)"</string>
    <string name="activity_started">"La Activity ha sido iniciada (Started)"</string>
    <string name="activity_resumed">"La Activity ha pasado a primer plano (Resumed)"</string>
    <string name="activity_paused">"La Activity ha sido pausada (Paused)"</string>
    <string name="activity_stopped">"La Activity ha sido parada (Stopped)"</string>
    <string name="activity_destroyed">"La Activity ha sido destruida (Destroyed)"</string>
    <string name="election_description">"El rey Viserys ha muerto... Debes elegir a su sucesor como rey de los Ándalos y de los Primeros Hombres, Señor de los Siete Reinos y Protector del Reino. Para ello debes decidir entre apoyar a..."</string>
    <string name="rhaenyra_targaryen">Rhaenyra Targaryen</string>
    <string name="aegon_targaryen">Aegon Targaryen</string>
    <string name="must_choice">Si no tomas una decisión no podrás salir de esta encrucijada.</string>
    <string name="rhaenyra_choice">Has decidido apoyar a una mujer por encima del primogénito varón... Lo pagarás con sangre.</string>
    <string name="aegon_choice">Has elegido a Aegon contra la voluntad del difunto rey... Arderás por tu elección... Dracarys!</string>
    <string name="both_choice">Jugar a dos bandas es muy peligroso... Tu cabeza podrá rodar en cualquier momento.</string>
    <string name="kneel">Hincar la rodilla</string>
    <string name="none_chosen">Al no elegir a ninguno de los herederos no te expones demasiado, pero tu posición ha quedado desamparada...</string>
    <string name="rhaenyra_chosen">Al elegir a Rhaenyra has provocado la ira de Aemon, el hermano de Aegon. Va con su dragón en tu búsqueda...</string>
    <string name="aegon_chosen">Al elegir a Aegon, te has convertido en el principal objetivo de Rhaenyra. Tendrás algún lugar donde esconderte?</string>
    <string name="both_chosen">Al elegir a ambos herederos has jugado todas tus cartas con un farol, te va a salir muy caro...</string>
    <string name="start">Inicio</string>
    <string name="before">Anterior</string>
    <string name="exit">Salir</string>
    <string name="say_your_name">Debes indicar tu nombre.</string>
    <string name="can_scape">%s te está buscando para cortar tu cabeza...\n Podrás escapar del castillo de Harrenhall antes de terminar chambuscado??</string>
    <string name="goon">Continuar</string>
    <string name="decline">Debes declinarte por uno de ellos</string>
    <string-array name="pursuit_events">
        <item>Te encuentras con unos caballeros que te cortan el paso. \n Luchas hasta deshacerte de ellos. </item>
        <item>Unos caballeros intentan detenerte, pero logras superarlos.</item>
        <item>Encuentras un escondite temporal para evitar a los caballeros.</item>
        <item>Te pierdes en los pasillos del castillo mientras los caballeros te buscan.</item>
        <item>Logras engañar a los caballeros y evitas ser capturado.</item>
        <item>Te enfrentas a un líder de los caballeros en combate.</item>
        <item>Te debilitas después de un enfrentamiento intenso con los secuaces del bando enemigo.</item>
        <item>Encuentras una fuente de energía para recuperarte.</item>
        <item>Los caballeros te alcanzan y te debilitan con un ataque sorpresa.</item>
        <item>Encuentras refugio en una sala oculta del castillo.</item>
        <item>Encuentras un objeto mágico que te ayuda a evadir a los caballeros.</item>
        <item>Te infiltras en la armería del castillo para obtener una ventaja estratégica.</item>
    </string-array>
    <string name="key_found">Has conseguido encontrar la llave de la puerta oculta que permite la salida. \n dirígete rápidamente a la salida antes de que sea demasiado tarde.</string>
    <string name="dragon_found">Desafortunadamente para tí, te has topado con el dragon Caraxes y te ha incinerado.\n Fin del juego.</string>
    <string name="exit_found_nokey">Has encontrado la puerta de la salida, pero aún no tienes la llave... búscala, rápido.</string>
    <string name="exit_found_key">Has encontrado la puerta de la salida, escuchas el aliento de un dragón que se aproxima, intentas abrir la puerta con la llave pero esta no consigue abrirse...\n El dragón asoma la cabeza y lanza un alarido de llamas, por suerte consigues abrir la puerta y escapar antes de que te alcancen las llamas.\n ¡Hoy es tu día de suerte!.</string>
    <string name="time_out">Tu tiempo se ha acabado y has sido capturado por los secuaces del bando enemigo...\n Te espera una muerte lenta y dolorosa!</string>
    <string name="event">EVENTO</string>
    <string name="castle">Castillo de Harrenhall</string>
</resources>