<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llcElection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElectionActivity"
    android:orientation="vertical"
    android:layout_margin="8dp" >


    <TextView
        android:id="@+id/tvGreetingElection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_election"
        />

    <TextView
        android:id="@+id/tvDescriptionelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/election_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbRhaenyra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rhaenyra_targaryen"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/cbAegon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aegon_targaryen"
            android:layout_weight="1" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/must_choice" />

    <Button
        android:id="@+id/btnKneel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kneel"
        android:layout_marginTop="8dp"
        />


</androidx.appcompat.widget.LinearLayoutCompat>