<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScapeActivity"
    android:orientation="vertical"
    android:layout_margin="8dp">


    <ImageView
        android:id="@+id/ivPortrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rhaenira"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/tvCastle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/castle"
        android:textColor="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnRoom0"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="" />
        <Button
            android:id="@+id/btnRoom1"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text=""
            android:layout_margin="4dp"/>
        <Button
            android:id="@+id/btnRoom2"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text=""
            android:layout_margin="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnRoom3"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="" />
        <Button
            android:id="@+id/btnRoom4"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text=""
            android:layout_margin="4dp"/>
        <Button
            android:id="@+id/btnRoom5"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text=""
            android:layout_margin="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnRoom6"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:text="" />
        <Button
            android:id="@+id/btnRoom7"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text=""
            android:layout_margin="4dp"/>
        <Button
            android:id="@+id/btnRoom8"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:text=""
            android:layout_margin="4dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/event"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEventDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/can_scape" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

</androidx.appcompat.widget.LinearLayoutCompat>